--- a/통계이론 및 데이터 시각화/확률의 개념과 특징.md
+++ b/통계이론 및 데이터 시각화/확률의 개념과 특징.md
@@ -64,5 +64,39 @@
 - 베이즈 정리
 
   - 사건 B1, B2, B3,...Bk는 상호배반이며, B1 U B2 U B3 U....U Bk = S 함
+  
   - 이때 사건A가 일어났다는 조건 하에서 사건 Bi가 일어날 확률
+  
   - P[Bi | A] = P[A n Bi] / P[A] = P[Bi] P[A|Bi] / P[B1]P[A|B1] + ...P[Bk]P[A|Bk]
+  
+    
+
+## 이항분포
+
+- 베르누이 시행
+  - 매시행마다 성공 또는 실패의 오직 두가지 가능한 결과만 가짐
+  - 성공의 확률이 p로 일정함
+- 이항 확률변수가 고려되는 시험
+  - 베르누이 시행을 독립적으로  n번 반복하는 실험
+
+## 포아송 분포
+
+- 단위시간 (t = 1), 포아송 확률과정에 따르는 사건 A가 발생하는 횟수를 X로 정의하면
+
+  f(x) = P(X = x) = exp(-m)m의 x승, x = 0, 1, 2
+
+  이 경우 X ~ POI[m]라고 함 
+
+- 포아송 분포의 특성치 : X ~ POI[m]인 경우, -E[X] = V[X] =m
+
+
+
+## 지수분포
+
+- 지수확률변수와 확률밀도함수
+
+  - 단위구간에서 평균발행횟수가 m인 포아송 확률과정을 따르는 사건 A가 한번 일어난 뒤
+
+    그 다음 또 일어날 때까지 걸리는 시간 X로 정의됨
+
+- 지수분포의 특성치 : 포아송 모수와 지수 모수는 역의 관계
